--- a/assets/index.css
+++ b/assets/index.css
@@ -1,4 +1,9 @@
 .blog-header-logo {
-  font-family: sans-serif;
+  font-family: 'Permanent Marker', cursive; sans-serif;
+  font-size: 2.25rem;
+}
+
+.blog-footer-title {
+  font-family: 'Permanent Marker', cursive; sans-serif;
   font-size: 2.25rem;
 }
