--- a/assets/index.css
+++ b/assets/index.css
@@ -7,3 +7,13 @@
   font-family: 'Permanent Marker', cursive; sans-serif;
   font-size: 2.25rem;
 }
+
+.header-links {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 800;
+}
+
+* {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+  }
