--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="{{ site.description }}">
+<meta name="description" content="{{ site.description | escape }}">
 <meta name="author" content="{{ site.author }}">
 <meta name="generator" content="Jekyll v4.0.1">
 
