--- a/_layouts/section.html
+++ b/_layouts/section.html
@@ -4,7 +4,7 @@ layout: default
 <section class="row m-2">
   <div class=" container-fluid">
     <div class="col-md-5 mx-auto mb-5">
-      <h1 class="d-flex justify-content-center">{{ page.title | capitalize}}</h1>
+      <h1 class="d-flex justify-content-center">{{ page.title | upcase }}</h1>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
