--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -3,10 +3,9 @@
 {% assign letterstring = "a,b,c,d,e,f,g,h,i,j,k,l,m,n" %}
 {% assign letters = letterstring | split: ',' %}
 
-<div class="carousel__holder">
+<div class="carousel__holder mx-auto">
     <div class="carousel">
         {% for item in site.data.carousel.images %}
-          HELLO
           <input class="carousel__activator" type="radio" name="carousel" id="{{ letters[forloop.index0] }}" {% if forloop.first %}checked="checked"{% endif %} />
         {% endfor %}
         {% for item in site.data.carousel.images %}
@@ -43,11 +42,11 @@
 </div>
 
 <style>
-.carousel__holder {width: 100%; position: relative; padding-bottom: {{ include.height }}{{ include.unit }}; margin: 1rem 0 1rem;}
+.carousel__holder {width: 400px; position: relative; padding-bottom: {{ include.height }}{{ include.unit }}; margin: 1rem 0 1rem;}
 .carousel {
   height: 100%;
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   text-align: center;
   position: absolute;
   padding: 0;
