--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <div class="container p-5">
   <div class="row media">
     <div class="col-md-3">
-      <img src="{{ site.baseurl }}/assets/images/van.jpg" class="mr-3 w-100"/>
+      <img src="{{ site.baseurl }}/assets/images/van.png" class="mr-3 w-100"/>
     </div>
     <div class="col-md-11 media-body">
-      <h3 class="text-left blog-footer-title">TVTV's Alternative American Documentation</h3>
+      <h3 class="text-left blog-footer-title">TVTV: Alternative America Televised</h3>
       <p class="text-left mt-2">{{ site.description }}</p>
     </div>
   </div>
