--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,10 @@
 <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Mansalva&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="{{ "/assets/index.css" | relative_url }}">
 
+
+<link rel="shortcut icon" href="{{ "/favicon.ico" | prepend: site.baseurl | prepend: site.url }}" />
+
+
 {% if page.title %}
 	<title>{{ page.title }} · {{ site.title }}</title>
 {% else %}
