change carousel aspect ratio to 4:3; modify landing page layout a bit

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
     <div class="col-md-11 media-body">
       <h3 class="text-left blog-footer-title">TVTV: Alternative America Televised</h3>
       <p class="text-left mt-2">{{ site.description }}</p>
+      <small class="text-left text-muted">© 2020 The Regents of the University of California<br>Images and videos © TVTV</small>
     </div>
   </div>
 </div>
