--- a/assets/index.css
+++ b/assets/index.css
@@ -1,10 +1,10 @@
 .blog-header-logo {
-  font-family: 'Permanent Marker', cursive; sans-serif;
+  font-family: 'Permanent Marker'; sans-serif;
   font-size: 2.25rem;
 }
 
 .blog-footer-title {
-  font-family: 'Permanent Marker', cursive; sans-serif;
+  font-family: 'Permanent Marker'; sans-serif;
   font-size: 2.25rem;
 }
 
