--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,14 @@
 <header class="blog-header my-5">
-  <div class="row flex-nowrap justify-content-between align-items-center pb-3 pt-1">
-    <div class="col-12 text-center">
+
+  <!-- <div class="row flex-nowrap justify-content-between align-items-center pb-3 pt-1"> -->
+  <div class="row flex-nowrap justify-content-between pb-1 pl-3 pt-1">
+    <div class="col-12">
       <a class="blog-header-logo text-dark" href="{{ site.baseurl | prepend: site.url}}/">{{ site.title }}</a>
     </div>
   </div>
   <div class="nav-scroller py-1 mb-2">
-    <nav class="nav d-flex justify-content-center">
+    <nav class="nav d-flex">
+
       {% for collection in site.collections %}
         {% if collection.label != 'posts' %}
           <a class="p-3 text-uppercase text-muted header-links" href="{{ collection.label | prepend: "/" | prepend: site.baseurl | prepend: site.url}}">{{ collection.label | replace: "-"," "}}</a>
