--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,23 @@
   {% include head.html %}
 </head>
   <body class="vsc-initialized">
-    <div class="container">
+    <div class="container-fluid">
+      <div class="row header-wordmark text-muted p-3">
+        <div class="col-sm-2 pl-0">
+          <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/bampfa-logo.jpg" alt="" /></a>
+        </div>
+        <div class="col-sm-9">
+          <div class="row">
+            <p></p>
+          </div>
+          <div class="row header-wordmark">
+            University of California
+          </div>
+          <div class="row header-wordmark pb">
+            Berkeley Art Museum • Pacific Film Archive
+          </div>
+        </div>
+      </div>
       {% include header.html %}
       {{ content }}
     </div>
@@ -15,7 +31,7 @@
     <!-- <p class="love">Made with <i class="fa fa-heart"></i> by <a href="https://alvaroduran.com">Álvaro</a></p> -->
 
     <!-- Javascript -->
-    <script type="text/javascript" id="embedUV" src="http://universalviewer.io/uv/lib/embed.js"></script>
+    <!-- <script type="text/javascript" id="embedUV" src="http://universalviewer.io/uv/lib/embed.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
