--- a/assets/index.css
+++ b/assets/index.css
@@ -1,6 +1,12 @@
 .blog-header-logo {
   font-family: 'Permanent Marker'; sans-serif;
-  font-size: 2.25rem;
+  font-size: 1.75rem;
+}
+
+.header-wordmark {
+  background-color: rgb(223, 223, 223);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 800;
 }
 
 .blog-footer-title {
