a couple more header tweaks

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="blog-header my-5">
+<header class="blog-header mb-5 mt-2">
 
   <!-- <div class="row flex-nowrap justify-content-between align-items-center pb-3 pt-1"> -->
   <div class="row flex-nowrap justify-content-between pb-1 pl-3 pt-1">
