--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,11 @@
 </head>
   <body class="vsc-initialized">
     <div class="container-fluid">
-      <div class="row header-wordmark text-muted p-3">
-        <div class="col-sm-2 pl-0">
-          <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/bampfa-logo.jpg" alt="" /></a>
+      <div class="row header-wordmark text-muted align-items-end p-3">
+        <div class="col-sm-2 pl-3 mr-0 pr-0 pb-0">
+          <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/bampfa-logo.jpg" alt="bampfa logo" style="width:100%; height:100%"/></a>
         </div>
-        <div class="col-sm-9">
+        <div class="col-sm-6 ml-3 pb-0">
           <div class="row">
             <p></p>
           </div>
