fine tune raw footage posts layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,20 +5,24 @@
 </head>
   <body class="vsc-initialized">
     <div class="container-fluid">
-      <div class="row header-wordmark text-muted align-items-end p-3">
-        <div class="col-sm-2 pl-3 mr-0 pr-0 pb-0">
-          <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/bampfa-logo.jpg" alt="bampfa logo" style="width:100%; height:100%"/></a>
+      <div class="row header-wordmark text-muted align-items-end">
+        <div class="col mr-0 pr-0 pl-3 pt-3 pb-3">
+          <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/bampfa-logo.jpg" alt="bampfa logo" style="height:100%"/></a>
         </div>
-        <div class="col-sm-6 ml-3 pb-0">
-          <div class="row">
+        <div class="col-8 ml-3 pb-3">
+          <!-- <div class="row">
             <p></p>
-          </div>
-          <div class="row header-wordmark">
+          </div> -->
+          <div class="row header-wordmark pt-3">
             University of California
           </div>
           <div class="row header-wordmark pb">
             Berkeley Art Museum • Pacific Film Archive
           </div>
+        </div>
+        <div class="col">
+          
+
         </div>
       </div>
       {% include header.html %}
