--- a/_layouts/section.html
+++ b/_layouts/section.html
@@ -10,7 +10,7 @@ layout: default
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
   </div>
-  <div class="container">
+  <div class="container-fluid">
     {{ content }}
   </div>
 </section>
