--- a/_includes/vimeo_player.html
+++ b/_includes/vimeo_player.html
@@ -1,1 +1,1 @@
-<iframe src="https://player.vimeo.com/video/{{ include.id }}" width="640" height="480" frameborder="0" allow="fullscreen" allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/{{ include.id }}" style="width: 100%; min-height: 340px" frameborder="0" allow="fullscreen" allowfullscreen></iframe>
