add jasons copy; some minor style tweaks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 </head>
   <body class="vsc-initialized">
     <div class="container-fluid">
-      <div class="row header-wordmark text-muted align-items-end">
+      <div class="row header-wordmark text-muted align-items-end p-3">
         <div class="col mr-0 pr-0 pl-3 pt-3 pb-3">
           <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/bampfa-logo.jpg" alt="bampfa logo" style="height:100%"/></a>
         </div>
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="col">
-          
+
 
         </div>
       </div>
