add real bampfa logos; modify header spacing a bit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <div class="container-fluid">
       <div class="row header-wordmark text-muted align-items-end p-3">
         <div class="col mr-0 pr-0 pl-3 pt-3 pb-3">
-          <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/bampfa-logo.jpg" alt="bampfa logo" style="height:100%"/></a>
+          <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/bampfa-wordmark.png" alt="bampfa logo" style="height:100%"/></a>
         </div>
         <div class="col-8 ml-3 pb-3">
           <!-- <div class="row">
@@ -17,7 +17,7 @@
             University of California
           </div>
           <div class="row header-wordmark pb">
-            Berkeley Art Museum • Pacific Film Archive
+            Berkeley Art Museum & Pacific Film Archive
           </div>
         </div>
         <div class="col">
