--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,16 @@
-<div class="container p-5">
+<div class="container-fluid">
   <div class="row media">
-    <div class="col-md-3">
-      <img src="{{ site.baseurl }}/assets/images/van.png" class="mr-3 w-100"/>
+    <div class="col-sm-2">
+      <!-- <img src="{{ site.baseurl }}/assets/images/footer-logo-bampfa.png" class="mr-3 w-100"/> -->
+      <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/footer-logo-bampfa.png" class="mr-3 w-100"/></a>
     </div>
-    <div class="col-md-11 media-body">
+    <div class="col-sm-7 media-body">
       <h3 class="text-left blog-footer-title">TVTV: Alternative America Televised</h3>
       <p class="text-left mt-2">{{ site.description }}</p>
       <small class="text-left text-muted">© 2020 The Regents of the University of California. All rights reserved.<br>Images and videos © TVTV</small>
+    </div>
+    <div class="col-sm-3">
+      <img src="{{ site.baseurl }}/assets/images/van.png" class="ml-3 w-100"/>
     </div>
   </div>
 </div>
