add jekyll-seo plugin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   {% include head.html %}
+  {% seo %}
 </head>
   <body class="vsc-initialized">
     <div class="container-fluid">
