try patching the archive.org embed

--- a/_includes/pdf_viewer.html
+++ b/_includes/pdf_viewer.html
@@ -1,8 +1,10 @@
 <div class="col text-center pdf-holder">
   <object data="{{ include.pdf }}" type='application/pdf'>
-    <p>Your browser may not support PDF viewing.</p>
-    <p>
-      <a href="{{ include.pdf }}" target="_blank">Open in a new window instead.</a>
-    </p>
+    <div class="col" style="background-color: #dcfcf2">
+      <p>Your browser may not support PDF viewing.</p>
+      <p>
+        <a href="{{ include.pdf }}" target="_blank">Open in a new window instead.</a>
+      </p>
+    </div>
   </object>
 </div>
