--- a/_includes/internetArchive.html
+++ b/_includes/internetArchive.html
@@ -1,1 +1,1 @@
-<iframe src="https://archive.org/embed/{{ include.id }}" frameborder="0" allow="fullscreen" allowfullscreen></iframe>
+<iframe src="https://archive.org/embed/{{ include.id }}" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
