--- a/_includes/sections/last_post.html
+++ b/_includes/sections/last_post.html
@@ -1,7 +1,7 @@
 <div class="container border-bottom">
   <div class="card my-5 pb-5 border-0">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 col-lg-12 col-xl-12">
         <div>
           <a href="{{ include.last_post.url | prepend: site.baseurl }}" class="text-reset">
             <h3>{{ include.last_post.title }}</h3>
@@ -10,7 +10,7 @@
           <p class="card-text"><small class="text-muted">{{ include.last_post.date | date_to_long_string }}</small></p>
         </div>
       </div>
-      <div class="col-md-8">
+      <div class="col-md-8 col-lg-12 col-xl-12">
         <img src="{{include.last_post.image}}" class="w-100" alt="image of {{ include.last_post.title }}">
       </div>
     </div>
