add wltvs tape 25 page; minor styling changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,11 @@
       <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/footer-logo-bampfa.png" class="mr-3 w-100"/></a>
     </div>
     <div class="col-sm-7 media-body">
-      <h3 class="text-left blog-footer-title">TVTV: Alternative America Televised</h3>
+      <h4 class="text-left blog-footer-title">TVTV: Alternative America Televised</h4>
       <p class="text-left mt-2">{{ site.description }}</p>
-      <small class="text-left text-muted">© 2020 The Regents of the University of California. All rights reserved.<br>Images and videos © TVTV</small>
+      <small class="text-left text-muted">This preservation project has been funded through a generous Humanities Collections and Reference Resources grant from the
+        <strong>National Endowment for the Humanities</strong><br>
+      © 2020 The Regents of the University of California. All rights reserved.<br>Images and videos © TVTV</small>
     </div>
     <div class="col-sm-3">
       <img src="{{ site.baseurl }}/assets/images/van.png" class="ml-3 w-100"/>
