--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <div class="jumbotron" style="background-image: url({{ page.image }}); background-size: cover;">
-  <h1 class="col-md-5 mx-auto mb-5 d-flex justify-content-center text-light display-5">{{ page.title }}</h1>
-  <h3 class="text-light">{{ page.description }}</h3>
+  <h1 class="col-md-5 mx-auto mb-5 d-flex justify-content-center display-5"><span>{{ page.title }}</span></h1>
+  <h3><span>{{ page.description }}</span></h3>
 </div>
 <article class="container">
   {{ content }}
