add essayist and interviewee info; update styling for large screens; meow

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,11 @@
     </div>
     <div class="col-sm-7 media-body">
       <h4 class="text-left blog-footer-title">TVTV: Alternative America Televised</h4>
-      <p class="text-left mt-2">{{ site.description }}</p>
+      <p class="text-left mt-2">{{ site.description }} Contribute to this site on <a href="https://github.com/BAM-PFA/guerrillatv">GitHub <i class="fa fa-github" aria-hidden="true"></i></a>
+        and follow us on <a href="https://www.instagram.com/bampfa_filmlibrary">Instagram <i class="fa fa-instagram" aria-hidden="true"></i></a>.
+
+
+</p>
       <small class="text-left text-muted">This preservation project has been funded through a generous Humanities Collections and Reference Resources grant from the
         <strong>National Endowment for the Humanities</strong><br>
       © 2020 The Regents of the University of California. All rights reserved.<br>Images and videos © TVTV</small>
