--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,6 @@
           <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/bampfa-wordmark.png" alt="bampfa logo" style="height:100%"/></a>
         </div>
         <div class="col-8 ml-3 pb-3">
-          <!-- <div class="row">
-            <p></p>
-          </div> -->
           <div class="row header-wordmark pt-3">
             University of California
           </div>
@@ -22,8 +19,7 @@
           </div>
         </div>
         <div class="col">
-
-
+          <!-- This page left intentionally blank -->
         </div>
       </div>
       {% include header.html %}
@@ -33,8 +29,7 @@
     <footer class="blog-footer mt-5">
       {% include footer.html %}
     </footer>
-    <!-- <p class="love">Made with <i class="fa fa-heart"></i> by <a href="https://alvaroduran.com">Álvaro</a></p> -->
-
+    <!-- Site by Michael Campos-Quinn based on the Onassis theme by Alvaro Duran -->
     <!-- Javascript -->
     <!-- <script type="text/javascript" id="embedUV" src="http://universalviewer.io/uv/lib/embed.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
