minor copy fixes

--- a/_includes/sections/last_post.html
+++ b/_includes/sections/last_post.html
@@ -10,7 +10,7 @@
           <p class="card-text"><small class="text-muted">{{ include.last_post.date | date_to_long_string }}</small></p>
         </div>
       </div>
-      <div class="col-md-8 col-lg-12 col-xl-12">
+      <div class="col-md-8 col-lg-12 col-xl-8 mx-auto">
         <img src="{{include.last_post.image}}" class="w-100" alt="image of {{ include.last_post.title }}">
       </div>
     </div>
