--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="{{ site.description | escape }}">
-<meta name="author" content="{{ site.author }}">
+<meta name="author" content="{{ page.author }}">
 <meta name="generator" content="Jekyll v4.0.1">
 
 <!-- Bootstrap CSS -->
