--- a/_includes/sections/last_post.html
+++ b/_includes/sections/last_post.html
@@ -6,7 +6,7 @@
           <a href="{{ include.last_post.url | prepend: site.baseurl }}" class="text-reset">
             <h3>{{ include.last_post.title }}</h3>{% if include.last_post.author %}<h5> by {{ include.last_post.author }}</h5>{% endif %}
           </a>
-          <p class="card-text">{{ include.last_post.excerpt }}</p>
+          <p class="card-text">{{ include.last_post.excerpt }} [. . .]</p>
           <p class="card-text"><small class="text-muted">{{ include.last_post.date | date_to_long_string }}</small></p>
         </div>
       </div>
