minor copy updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,8 +11,7 @@
 
 
 </p>
-      <small class="text-left text-muted">This preservation project has been funded through a generous Humanities Collections and Reference Resources grant from the
-        <strong>National Endowment for the Humanities</strong><br>
+      <small class="text-left text-muted">This website has been made possible in part by the National Endowment for the Humanities: Exploring the human endeavor. Any views, findings, conclusions, or recommendations expressed in this website, do not necessarily represent those of the National Endowment for the Humanities.<br>
       © 2020 The Regents of the University of California. All rights reserved.<br>Images and videos © TVTV</small>
     </div>
     <div class="col-sm-3">
