--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,31 @@
 <div class="container-fluid">
-  <div class="row media">
-    <div class="col-sm-2">
-      <!-- <img src="{{ site.baseurl }}/assets/images/footer-logo-bampfa.png" class="mr-3 w-100"/> -->
-      <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/footer-logo-bampfa.png" class="mr-3 w-100"/></a>
-    </div>
-    <div class="col-sm-7 media-body">
+  <hr>
+  <div class="row mt-0">
+    <div class="col-12 text-center">
       <h4 class="text-left blog-footer-title">TVTV: Alternative America Televised</h4>
-      <p class="text-left mt-2">{{ site.description }} Contribute to this site on <a href="https://github.com/BAM-PFA/guerrillatv">GitHub <i class="fa fa-github" aria-hidden="true"></i></a>
-        and follow us on <a href="https://www.instagram.com/bampfa_filmlibrary">Instagram <i class="fa fa-instagram" aria-hidden="true"></i></a>.
-
-
-</p>
-      <small class="text-left text-muted">This website has been made possible in part by the National Endowment for the Humanities: Exploring the human endeavor. Any views, findings, conclusions, or recommendations expressed in this website, do not necessarily represent those of the National Endowment for the Humanities.<br>
-      © 2020 The Regents of the University of California. All rights reserved.<br>Images and videos © TVTV</small>
+      <p class="text-left mt-2">
+        <!--{{ site.description }}--> Contribute to this site on <a href="https://github.com/BAM-PFA/guerrillatv">GitHub <i class="fa fa-github" aria-hidden="true"></i></a>and follow us on <a href="https://www.instagram.com/bampfa_filmlibrary">Instagram <i class="fa fa-instagram" aria-hidden="true"></i></a>.
+      </p>
     </div>
-    <div class="col-sm-3">
-      <img src="{{ site.baseurl }}/assets/images/van.png" class="ml-3 w-100"/>
+  </div>
+  <div class="row media mt-0">
+    <div class="col-xs-12 col-sm-4 text-center">
+      <!-- <img src="{{ site.baseurl }}/assets/images/footer-logo-bampfa.png" class="mr-3 w-100"/> -->
+      <a href="https://bampfa.org"><img src="{{ site.baseurl }}/assets/images/footer-logo-bampfa.png" class="mr-3 w-50"/></a>
+    </div>
+    <div class="col-xs-12 col-sm-4 text-center">
+      <img src="{{ site.baseurl }}/assets/images/van.png" class="ml-3 w-50"/>
+    </div>
+    <div class="col-xs-12 col-sm-4 text-center">
+      <img src="{{ site.baseurl }}/assets/images/neh-logo.jpg" class="ml-3 w-50"/>
+    </div>
+  </div>
+  <div class="row mb-2">
+    <div class="col-12">
+      <small class="text-left text-muted">
+        This website has been made possible in part by the National Endowment for the Humanities: Exploring the human endeavor. Any views, findings, conclusions, or recommendations expressed in this website, do not necessarily represent those of the National Endowment for the Humanities.<br>
+        © 2020 The Regents of the University of California. All rights reserved. Images and videos © TVTV
+      </small>
     </div>
   </div>
 </div>
