--- a/assets/index.css
+++ b/assets/index.css
@@ -70,24 +70,25 @@ div.jumbotron span {
 }
 
 .iframe-div-container {
-    /* position: absolute; */
+    position: relative;
     top: 0;
-    /* right: 0; */
     left: 0;
-    /* bottom: 0; */
     display: inline-block;
-    /* text-align:center; */
-    z-index: 2;
+    cursor: pointer;
+}
+
+.iframe-div-container-null {
+    position: relative;
+    top: 0;
+    left: 0;
+    display: inline-block;
 }
 
 .iframe-overlaid {
   position: absolute;
-  /* position: relative; */
-  /* width: 100%; */
-  /* top: 50; */
   padding-top: 2.5%;
-  /* padding-bottom: 3.75%; */
   z-index: 0;
+  visibility: hidden;
 }
 
 .iframe-overlaid iframe {
@@ -99,6 +100,9 @@ div.jumbotron span {
 .iframe-loaded {
   z-index: 3;
   overflow: hidden;
+  position: absolute;
+  padding-top: 2.5%;
+  visibility:visible;
   /* width: 80%; */
   /* height: 52%; */
 }
@@ -108,16 +112,28 @@ div.jumbotron span {
   z-index: 1;
   position: relative;
   width: 100%;
-  /*top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0; */
 }
 
 .iframe-img-hidden {
   visibility: hidden;
-  -webkit-transition: opacity 0.5s;
-  transition: opacity 0.5s;
+}
+
+.closer {
+  visibility: visible;
+  position: absolute;
+  z-index: 4;
+  width: 9%;
+  cursor: pointer;
+  color: white;
+  padding-top: 2%;
+  padding-left: 2%;
+}
+
+.closer-hidden {
+  visibility: hidden;
+  position: absolute;
+  width: 5%;
+  z-index: 0;
 }
 
 .fade-out {
