--- a/_includes/sections/interview_posts.html
+++ b/_includes/sections/interview_posts.html
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="col-8 mx-auto mt-3">
-        <img src="{{item.image}}" class="w-100" alt="image of {{ item.title }}">
+        <img src="{{item.image}}" style="width: 100%" alt="image of {{ item.title }}">
       </div>
     </div>
   </div>
